# ChangeLog for sys-fs/cryptsetup-luks
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/cryptsetup-luks/ChangeLog,v 1.43 2006/10/12 11:03:00 strerror Exp $

*cryptsetup-luks-1.0.3-r3 (12 Oct 2006)

  12 Oct 2006; Benjamin Smee <strerror@gentoo.org>
  +files/1.0.3-cryptfs.confd, +files/1.0.3-dm-crypt-start.sh,
  +files/1.0.3-dm-crypt-stop.sh, +cryptsetup-luks-1.0.3-r3.ebuild:
  Fixes for bugs #150510, #148390 and many others. Special thanks to Federico
  Zagarzazú who wrote the new scripts

  26 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  cryptsetup-luks-1.0.3-r2.ebuild:
  Stable on hppa

  18 Sep 2006; Benjamin Smee <strerror@gentoo.org>
  cryptsetup-luks-1.0.3-r2.ebuild:
  Change for bug #141182

  28 Aug 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  cryptsetup-luks-1.0.3-r2.ebuild:
  Gimme the ~hppa

  23 Aug 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  cryptsetup-luks-1.0.3-r2.ebuild:
  Stable on alpha and mips since it was used for the release on both and has
  been tested by both release coordinators.

  08 Aug 2006; Luis Medinas <metalgod@gentoo.org>
  cryptsetup-luks-1.0.3-r2.ebuild:
  Stable on amd64. Bug #134607.

  08 Aug 2006; Mike Frysinger <vapier@gentoo.org>
  cryptsetup-luks-1.0.3-r2.ebuild:
  Cleanup src_compile(), punt invalid USE=pic, and make sure that just running
  autoconf works.

  05 Aug 2006; Mike Frysinger <vapier@gentoo.org>
  cryptsetup-luks-1.0.3-r2.ebuild:
  Fix building with newer gettext #142362.

  10 Jul 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  cryptsetup-luks-1.0.3-r2.ebuild:
  Stable on sparc

  05 Jul 2006; Joshua Jackson <tsunam@gentoo.org>
  cryptsetup-luks-1.0.3-r2.ebuild:
  Stable x86; bug #134607

  02 Jul 2006; Lars Weiler <pylon@gentoo.org>
  cryptsetup-luks-1.0.3-r2.ebuild:
  Stable on ppc; bug #134607.

  08 Jun 2006; Markus Rothe <corsair@gentoo.org>
  cryptsetup-luks-1.0.3-r2.ebuild:
  Stable on ppc64; bug #134607
