@@ -1,0 +1,3 @@
+MD5 156ae6b618438ee9feeddc6c2bdc4e94 cryptsetup-luks-1.0.4.tar.bz2 306907
+RMD160 47737ab9302152a64f0e13b405c219d0166d8217 cryptsetup-luks-1.0.4.tar.bz2 306907
+SHA256 5ba6066d79443fce157b8b6081be466b4c04759cf5cd020b51a8f6cfc996e2a6 cryptsetup-luks-1.0.4.tar.bz2 306907
